# cog-computing-lab03

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  PROJECT_STRUCTURE.txt  QUICK_REFERENCE.txt  README.md  START_HERE.md  TESTING.md  app.py  create_admin.py  docker-compose.yml  manual_test.sh  pyproject.toml  test_app.py
database/: init.sql
templates/: base.html  create_user.html  dashboard.html  edit_user.html  login.html
